# origin-aggregated-logging

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  HACKING.md  Makefile  OWNERS  README.md  apb.yml  ci-ansible-common.yaml  ci-ansible-journald.yaml  ci-ansible-json-file.yaml  logging.yml  ops-logging.yml
.github/: pull_request_template.md
curator/: .gitignore  Dockerfile  Dockerfile.centos7  Dockerfile.in  README.md  VENDOR.md  container.yaml  elasticsearch.repo  install-centos7-deps.sh  install.sh  origin-meta.yaml  requirements.txt  rh-manifest.txt  run.sh  run_cron.py  setup.py  sources
deployer/: Dockerfile  README.md  deployer.yaml  run.sh
deployment/: .gitignore  Dockerfile  README.md  deployer.yaml  run.sh
docs/: README.md  REVIEW.md  access-control.md  checking-efk-health.md  com.redhat.viaq-openshift-operations.asciidoc  com.redhat.viaq-openshift-project.asciidoc  deploy-event-router.md  extract_configmap.md  issues.md  kibana-custom-certs.md  log-drivers-and-throttling.md  metrics.md  mux-logging-service-diag1.dia  mux-logging-service-diag2.dia  mux-logging-service-diag3.dia  mux-logging-service-diag4.dia  mux-logging-service.md  org.ovirt.viaq-collectd.asciidoc  quickstart.md  release_notes.md  remote-syslog.md  roadmap.md  troubleshooting-ci.md  troubleshooting.md
elastalert/: Dockerfile.centos7  entrypoint.sh
elasticsearch/: .gitignore  Dockerfile  Dockerfile.centos7  Dockerfile.centos7.s3repository  Dockerfile.in  Dockerfile.origin  Dockerfile.rhel8  README.md  ci-env.sh  com.redhat.viaq.template.json  container.yaml  elasticsearch.repo  elasticsearch.yml  es_util  extra-jvm.options  fetch-artifacts-koji.yaml  init.sh  initialize.sh  install-es.sh  install.sh  logging.yml  origin-meta.yaml  prep-install.origin  prep-install.prod  rh-manifest.txt  run.sh  sources  whitelist.policy
fluentd/: .Gemfile.swp  Dockerfile  Dockerfile.centos7  Dockerfile.in  Gemfile  README.md  aws-sdk-core.source0001.patch  centos-cloud-sig.repo  container.yaml  ffi-compiler.gemspec.patch.sh  ffi.gemspec.patch.sh  ffi.gemspec0001.patch  ffi.source0001.patch  filter-common-data-model.rb  filter_k8s_meta_for_mux_client.rb  filter_viaq_level_field.rb  fluent-plugin-cloudwatch-logs.source0001.patch  fluent-plugin-detect-exceptions.source0001.patch  fluent-plugin-kafka.source0001.patch  fluent-plugin-kafka.source0002.patch  fluent-plugin-viaq_data_model-0.0.6.gem  fluent.conf  fluentd_es_copy_config.conf  generate_syslog_config.rb  generate_throttle_configs.rb  in_prometheus_tail_monitor.source0001.patch  in_tail.source0001.patch  install-gems.sh  manifest  origin-meta.yaml  out_elasticsearch.rb  out_rawtcp.rb  out_remote_syslog.rb  out_syslog.rb  out_syslog_buffered.rb  parser_viaq_docker_audit.rb  protocol-hpack.gemspec0001.patch  rh-manifest.txt  run.sh  run45.sh  (+7 more)
hack/: README-dump.md  branch-deps.spec  build-component-image.sh  build-images.sh  build-release.sh  common.sh  deploy-component-image.sh  deploy-logging-marketplace.sh  deploy-logging.sh  deploy-openshift-cluster.sh  enable-kibana-msearch-access.sh  generate-dockerfile-from-midstream  get-cluster-run-tests.sh  get-machine-run-tests.sh  pvc.yml  (+16 more)
rsyslog/vendored_src/liblognorm/liblognorm/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  lognorm.pc.in
rsyslog/vendored_src/liblognorm/liblognorm/compat/: Makefile.am  Makefile.in  strndup.c
rsyslog/vendored_src/liblognorm/liblognorm/doc/: Makefile.am  Makefile.in  changes.rst  conf.py  configuration.rst  contacts.rst  index.rst  installation.rst  internals.rst  introduction.rst  libraryapi.rst  license.rst  lognormalizer.rst  sample_rulebase.rst
rsyslog/vendored_src/liblognorm/liblognorm/rulebases/: cisco.rulebase  messages.rulebase  sample.rulebase  syntax.txt
rsyslog/vendored_src/liblognorm/liblognorm/src/: Makefile.am  Makefile.in  annot.c  annot.h  enc.h  enc_csv.c  enc_syslog.c  enc_xml.c  helpers.h  internal.h  liblognorm.c  liblognorm.h  lognorm-features.h  lognorm-features.h.in  lognorm.c  lognorm.h  lognormalizer.c  parser.c  parser.h  pdag.c  pdag.h  samp.c  samp.h  v1_liblognorm.c  v1_liblognorm.h  v1_parser.c  v1_parser.h  v1_ptree.c  v1_ptree.h  v1_samp.c  v1_samp.h
rsyslog/vendored_src/liblognorm/liblognorm/tests/: Makefile.am  Makefile.in  alternative_nested.sh  alternative_segfault.sh  alternative_simple.sh  alternative_three.sh  annotate.sh  exec.sh  field_cee-syslog.sh  field_cee-syslog_jsoncnf.sh  field_cee-syslog_v1.sh  field_cef.sh  field_cef_jsoncnf.sh  field_cef_v1.sh  field_checkpoint-lea.sh  field_checkpoint-lea_jsoncnf.sh  field_checkpoint-lea_v1.sh  field_cisco-interface-spec.sh  field_descent.sh  field_descent_with_invalid_ruledef.sh  field_duration.sh  field_duration_jsoncnf.sh  field_duration_v1.sh  field_float-fmt_number.sh  field_float.sh  field_float_jsoncnf.sh  field_float_v1.sh  field_float_with_invalid_ruledef.sh  field_hexnumber-fmt_number.sh  field_hexnumber.sh  field_hexnumber_jsoncnf.sh  field_hexnumber_range.sh  field_hexnumber_range_jsoncnf.sh  field_hexnumber_v1.sh  field_interpret.sh  field_interpret_with_invalid_ruledef.sh  field_ipv6.sh  field_ipv6_jsoncnf.sh  field_ipv6_v1.sh  field_json.sh  (+82 more)
rsyslog/vendored_src/liblognorm/liblognorm/tools/: Makefile.am  Makefile.in  logrecord.h
rsyslog/vendored_src/librelp/librelp/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
rsyslog/vendored_src/librelp/librelp/doc/: Makefile.in
rsyslog/vendored_src/librelp/librelp/src/: Makefile.am  Makefile.in  copen.c  librelp.h  offers.c  relp.c  relp.h  relpclt.c  relpframe.c  relpsess.c  relpsess.h  relpsrv.c  relpsrv.h  scsyslog.c  sendbuf.c  tcp.c  tcp.h
rsyslog/vendored_src/librelp/librelp/tests/: Makefile.am  Makefile.in  basic.sh  long-msg.sh  oversize-msg-abort-errmsg.sh  oversize-msg-accept-errmsg.sh  receive.c  send.c  test-framework.sh  tls-basic-anon.sh  tls-basic-vg.sh  tls-basic.sh  tls-missing-param-receiver.sh  tls-missing-param-sender.sh  tls-wrong-authname.sh  tls-wrong-permittedPeer.sh  truncate-oversize-msg.sh
(+3113 files in other folders)
