# Note: slsa is not yet functional with the v2 engine!
#bin_PROGRAMS = slsa
#slsa_SOURCES = slsa.c syntaxes.c ../src/parser.c
#slsa_CPPFLAGS =  -I$(top_srcdir)/src $(JSON_C_CFLAGS)
#slsa_LDADD = $(JSON_C_LIBS) $(LIBLOGNORM_LIBS) $(LIBESTR_LIBS)
#slsa_DEPENDENCIES = ../src/liblognorm.la

EXTRA_DIST=logrecord.h
#include_HEADERS=
